# StarCraft

./: Abilities.h  Battle.c  Battle.h  BattleCruser.c  BattleCruser.h  Carrier.c  Carrier.h  Defines.h  List.c  List.h  Phoenix.c  Phoenix.h  ReadMe.txt  Ship.h  Viking.c  Viking.h  a.out  main.c
CMake/include/: Battle.h  Carrier.h
CMake/src/: Battle.c  BattleCruser.c  Carrier.c  List.c  Phoenix.c  Viking.c  main.c
StarCraft/: Abilities.h  BattleCruser.c  Carrier.h  List.c  List.h  Phoenix.c  Phoenix.h  Ship.h  Viking.c  Viking.h
StarCraft-Siyana/: Battle.c  BattleCruser.c  List.c  List.h  Viking.c  a.out
StarCraft-Test/: BattleCruser.h  Carrier.h  Defines.h  List.c  List.h
StarCraft-V/include/: Abilities.h  Battle.h  BattleCruser.h  Carrier.h  Phoenix.h  Ship.h  Viking.h
StarCraft-V/src/: Battle.c  BattleCruser.c  Carrier.c  Phoenix.c  ShipFunctions.c  Viking.c  main.c
StarCraft2/include/: Abilities.h  (+1 more)
StarCraftTest/: Carrier.c  Carrier.h  Defines.h  Ship.h
StarCraft_1-0/: Battle.c  Battle.h  BattleCruser.c  BattleCruser.h  Carrier.c  List.h  Phoenix.c  Phoenix.h  Viking.h  lib.h
StarCraft_Complete/: Battle.c  BattleCruser.c  BattleCruser.h  Carrier.c  Phoenix.c  Viking.c
StarCraft_Complete_CMake/: CMakeLists.txt
StarCraft_Complete_CMake/include/: BattleCruser.h  List.h  Ship.h  Viking.h
StarCraft_Complete_CMake/src/: Battle.c  Carrier.c  Phoenix.c  Viking.c  main.c
include/: Abilities.h  Battle.h  BattleCruser.h  Carrier.h  List.h  Phoenix.h  Ship.h  Viking.h
src/: Battle.c  BattleCruser.c  Carrier.c  List.c  Phoenix.c  Viking.c  main.c
(+4 files in other folders)
